yanl/examples/t1/correct/expresii.yanl
(* vim:set filetype=pascal: *)

program expresii;

var a,b:integer;
    d,e:boolean;
	z:real;

function x(y:integer):real
begin
  x := 5;
end;

begin
	a := 4*5*6;
	d := 4 < 5 and 6 < 8 xor (a+3) > 5;
	a := ((((((((9+a))))))));
	a := (integer)(1 <> 2 or (boolean)3);

	z := 2 + 4 + 4 - 4 - (1*2*3 - 4*4*5);
	a := 9 mod 3;
	a := (integer)false;
	a := ---5;
	a := - (b);
	d := e;
	d := a < b;
	d := a > x(3);
	d := (a < x(9)) < false;
end.

